--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,5 +1,9 @@
 .button:hover {
-    background-color: #f5f5f5;
+    background-color: #E4FDE1;
     color: black;
     border: 1px solid black;
   }
+  .navbar{
+    background-color: #E4FDE1;
+  }
+  
